--- a/fig 9 Words.ipynb
+++ b/fig 9 Words.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "f1['Field'] = f1['Nobel'].map(f2.set_index('paperid')['Field'])\n",
-    "f1.dropna(subset = 'title',inplace = True)"
+    "f1.dropna(subset = 'title&abstract',inplace = True)"
    ]
   },
   {
@@ -113,8 +113,8 @@
    },
    "outputs": [],
    "source": [
-    "f1['length'] = f1['title'].apply(len)\n",
-    "f1['words'] = f1['title'].apply(nltk.word_tokenize)\n",
+    "f1['length'] = f1['title&abstract'].apply(len)\n",
+    "f1['words'] = f1['title&abstract'].apply(nltk.word_tokenize)\n",
     "f1['#words'] = f1['words'].apply(len)"
    ]
   },
@@ -187,7 +187,7 @@
    "id": "3fe9d52c",
    "metadata": {},
    "source": [
-    "# title length"
+    "# title&abstract length"
    ]
   },
   {
@@ -224,10 +224,10 @@
     "    plt.xticks(x_pos,['DCP','CCP'],fontsize = 25)\n",
     "    plt.yticks(size = 24)\n",
     "    if _ == 0:\n",
-    "        plt.ylabel(r'Avg. Title length',fontsize = 30)\n",
+    "        plt.ylabel(r'Avg. title&abstract length',fontsize = 30)\n",
     "    else:\n",
     "        plt.ylabel(r'',fontsize = 0)\n",
-    "    plt.title(labels[_],size = 35)\n",
+    "    plt.title&abstract(labels[_],size = 35)\n",
     "    ax.axvspan(min(x_pos)-1, max(x_pos) / 2+0.5, facecolor='#154360', alpha=0.2)\n",
     "    ax.axvspan(max(x_pos) / 2+0.5, max(x_pos)+1, facecolor='#6E2C00', alpha=0.2)\n",
     "\n",
@@ -365,10 +365,10 @@
     "    plt.xticks(x_pos,['DCP','CCP'],fontsize = 25)\n",
     "    plt.yticks(size = 24)\n",
     "    if _ == 0:\n",
-    "        plt.ylabel(r'Avg. Title length',fontsize = 30)\n",
+    "        plt.ylabel(r'Avg. title&abstract length',fontsize = 30)\n",
     "    else:\n",
     "        plt.ylabel(r'',fontsize = 0)\n",
-    "#     plt.title(labels[_],size = 35)\n",
+    "#     plt.title&abstract(labels[_],size = 35)\n",
     "    ax.axvspan(min(x_pos)-1, max(x_pos) / 2+0.5, facecolor='#154360', alpha=0.2)\n",
     "    ax.axvspan(max(x_pos) / 2+0.5, max(x_pos)+1, facecolor='#6E2C00', alpha=0.2)\n",
     "plt.savefig(r'G:\\A J YANG PAPER\\Working paper (under review)\\IPM Disruptive and consolidating Citing Papers\\2\\fig\\fig 7 word\\1.pdf',bbox_inches = 'tight')"
@@ -452,7 +452,7 @@
     "        plt.ylabel(r'#Words',fontsize = 30)\n",
     "    else:\n",
     "        plt.ylabel(r'',fontsize = 0)\n",
-    "#     plt.title(labels[_],size = 35)\n",
+    "#     plt.title&abstract(labels[_],size = 35)\n",
     "    ax.axvspan(min(x_pos)-1, max(x_pos) / 2+0.5, facecolor='#154360', alpha=0.2)\n",
     "    ax.axvspan(max(x_pos) / 2+0.5, max(x_pos)+1, facecolor='#6E2C00', alpha=0.2)\n",
     "plt.savefig(r'G:\\A J YANG PAPER\\Working paper (under review)\\IPM Disruptive and consolidating Citing Papers\\2\\fig\\fig 7 word\\2.pdf',bbox_inches = 'tight')"
